
SET (CXX_SRCS
fem_linear_solver.cc
fem_pde_solver.cc
fvm_explicit_solver.cc
fvm_flex_nonlinear_solver.cc
fvm_flex_pde_solver.cc
fvm_linear_solver.cc
fvm_nonlinear_solver.cc
fvm_pde_solver.cc
solver_base.cc
solver_specify.cc
ddm1/ddm1_boundary_charge_emit.cc
ddm1/ddm1_boundary_ei_interface.cc
ddm1/ddm1_boundary_float_metal.cc
ddm1/ddm1_boundary_gate.cc
ddm1/ddm1_boundary_hetero_interface.cc
ddm1/ddm1_boundary_homo_interface.cc
ddm1/ddm1_boundary_ii_interface.cc
ddm1/ddm1_boundary_ir_interface.cc
ddm1/ddm1_boundary_is_interface.cc
ddm1/ddm1_boundary_neumann.cc
ddm1/ddm1_boundary_ohmic.cc
ddm1/ddm1_boundary_poly_gate.cc
ddm1/ddm1_boundary_resistance_ohmic.cc
ddm1/ddm1_boundary_resistance_schottky.cc
ddm1/ddm1_boundary_rr_interface.cc
ddm1/ddm1_boundary_schottky.cc
ddm1/ddm1_boundary_simple_gate.cc
ddm1/ddm1_boundary_solderpad.cc
ddm1/ddm1.cc
ddm1/ddm1_conductor.cc
#ddm1/ddm1_conductor_hanging_node.cc
ddm1/ddm1_insulator.cc
#ddm1/ddm1_insulator_hanging_node.cc
ddm1/ddm1_resistance.cc
#ddm1/ddm1_resistance_hanging_node.cc
ddm1/ddm1_semiconductor.cc
#ddm1/ddm1_semiconductor_hanging_node.cc
#ddm1r/ddm1r_boundary_ir_interface.cc
#ddm1r/ddm1r_boundary_resistance_ohmic.cc
#ddm1r/ddm1r_boundary_resistance_schottky.cc
#ddm1r/ddm1r_boundary_rr_interface.cc
#ddm1r/ddm1r_boundary_solderpad.cc
#ddm1r/ddm1r.cc
#ddm1r/ddm1r_resistance.cc
#ddm1r/ddm1r_resistance_hanging_node.cc
ddm2/ddm2_boundary_ei_interface.cc
ddm2/ddm2_boundary_ev.cc
ddm2/ddm2_boundary_float_metal.cc
ddm2/ddm2_boundary_gate.cc
ddm2/ddm2_boundary_hetero_interface.cc
ddm2/ddm2_boundary_homo_interface.cc
ddm2/ddm2_boundary_ii_interface.cc
ddm2/ddm2_boundary_ir_interface.cc
ddm2/ddm2_boundary_is_interface.cc
ddm2/ddm2_boundary_iv.cc
ddm2/ddm2_boundary_neumann.cc
ddm2/ddm2_boundary_ohmic.cc
ddm2/ddm2_boundary_poly_gate.cc
ddm2/ddm2_boundary_resistance_ohmic.cc
ddm2/ddm2_boundary_resistance_schottky.cc
ddm2/ddm2_boundary_rr_interface.cc
ddm2/ddm2_boundary_schottky.cc
ddm2/ddm2_boundary_simple_gate.cc
ddm2/ddm2_boundary_solderpad.cc
ddm2/ddm2.cc
ddm2/ddm2_conductor.cc
#ddm2/ddm2_conductor_hanging_node.cc
ddm2/ddm2_insulator.cc
#ddm2/ddm2_insulator_hanging_node.cc
ddm2/ddm2_resistance.cc
#ddm2/ddm2_resistance_hanging_node.cc
ddm2/ddm2_semiconductor.cc
#ddm2/ddm2_semiconductor_hanging_node.cc
ddm_ac/ddmac_boundary_ei_interface.cc
ddm_ac/ddmac_boundary_ev.cc
ddm_ac/ddmac_boundary_float_metal.cc
ddm_ac/ddmac_boundary_gate.cc
ddm_ac/ddmac_boundary_hetero_interface.cc
ddm_ac/ddmac_boundary_homo_interface.cc
ddm_ac/ddmac_boundary_ii_interface.cc
ddm_ac/ddmac_boundary_ir_interface.cc
ddm_ac/ddmac_boundary_is_interface.cc
ddm_ac/ddmac_boundary_iv.cc
ddm_ac/ddmac_boundary_neumann.cc
ddm_ac/ddmac_boundary_ohmic.cc
ddm_ac/ddmac_boundary_poly_gate.cc
ddm_ac/ddmac_boundary_resistance_ohmic.cc
ddm_ac/ddmac_boundary_resistance_schottky.cc
ddm_ac/ddmac_boundary_rr_interface.cc
ddm_ac/ddmac_boundary_schottky.cc
ddm_ac/ddmac_boundary_simple_gate.cc
ddm_ac/ddmac_boundary_solderpad.cc
ddm_ac/ddm_ac.cc
ddm_ac/ddmac_conductor.cc
ddm_ac/ddmac_insulator.cc
ddm_ac/ddmac_resistance.cc
ddm_ac/ddmac_semiconductor.cc
ddm_common/charge_integral.cc
ddm_common/ddm_solver.cc
ddm_common/gate_current.cc
ddm_common/inter_connect.cc
ddm_common/mixA_solver.cc
ddm_common/mix_inter_connect.cc
ddm_common/mix_solver.cc
ddm_common/mob_semiconductor.cc
ddm_common/semiconductor_interface_current.cc
dg/dg_boundary_homo_interface.cc
dg/dg_boundary_is_interface.cc
dg/dg_boundary_ohmic.cc
dg/dg_boundary_resistance_ohmic.cc
dg/dg.cc
dg/dg_conductor.cc
dg/dg_insulator.cc
dg/dg_resistance.cc
dg/dg_semiconductor.cc
doping_analytic/doping_analytic.cc
doping_analytic/doping_fun.cc
ebm3/ebm3_boundary_ei_interface.cc
ebm3/ebm3_boundary_ev.cc
ebm3/ebm3_boundary_float_metal.cc
ebm3/ebm3_boundary_gate.cc
ebm3/ebm3_boundary_hetero_interface.cc
ebm3/ebm3_boundary_homo_interface.cc
ebm3/ebm3_boundary_ii_interface.cc
ebm3/ebm3_boundary_ir_interface.cc
ebm3/ebm3_boundary_is_interface.cc
ebm3/ebm3_boundary_iv.cc
ebm3/ebm3_boundary_neumann.cc
ebm3/ebm3_boundary_ohmic.cc
ebm3/ebm3_boundary_resistance_ohmic.cc
ebm3/ebm3_boundary_resistance_schottky.cc
ebm3/ebm3_boundary_rr_interface.cc
ebm3/ebm3_boundary_schottky.cc
ebm3/ebm3_boundary_simple_gate.cc
ebm3/ebm3_boundary_solderpad.cc
ebm3/ebm3.cc
ebm3/ebm3_conductor.cc
#ebm3/ebm3_conductor_hanging_node.cc
ebm3/ebm3_insulator.cc
#ebm3/ebm3_insulator_hanging_node.cc
ebm3/ebm3_resistance.cc
#ebm3/ebm3_resistance_hanging_node.cc
ebm3/ebm3_semiconductor.cc
#ebm3/ebm3_semiconductor_hanging_node.cc
ebm3/ebm3_semiconductor_jacob.cc
emfem2d/emfem2d.cc
hall/hall.cc
hall/hall_conductor.cc
hall/hall_insulator.cc
hall/hall_resistance.cc
hall/hall_semiconductor.cc
#hdm/hdm_boundary_neumann.cc
#hdm/hdm_boundary_ohmic.cc
#hdm/hdm.cc
#hdm/hdm_semiconductor.cc
#hdm/linear_poisson_boundary_ohmic.cc
#hdm/linear_poisson.cc
#hdm/linear_poisson_conductor.cc
#hdm/linear_poisson_insulator.cc
#hdm/linear_poisson_semiconductor.cc
mix1/mix1_boundary_gate.cc
mix1/mix1_boundary_ohmic.cc
mix1/mix1_boundary_poly_gate.cc
mix1/mix1_boundary_schottky.cc
mix1/mix1_boundary_solderpad.cc
mix1/mix1.cc
mixA1/mixA1_boundary_gate.cc
mixA1/mixA1_boundary_ohmic.cc
mixA1/mixA1_boundary_poly_gate.cc
mixA1/mixA1_boundary_schottky.cc
mixA1/mixA1_boundary_solderpad.cc
mixA1/mixA1.cc
mixA2/mixA2_boundary_gate.cc
mixA2/mixA2_boundary_ohmic.cc
mixA2/mixA2_boundary_schottky.cc
mixA2/mixA2_boundary_solderpad.cc
mixA2/mixA2.cc
mixA3/mixA3_boundary_gate.cc
mixA3/mixA3_boundary_ohmic.cc
mixA3/mixA3_boundary_schottky.cc
mixA3/mixA3_boundary_solderpad.cc
mixA3/mixA3.cc
mole_analytic/mole_analytic.cc
poisson/poisson_boundary_ei_interface.cc
poisson/poisson_boundary_float_metal.cc
poisson/poisson_boundary_gate.cc
poisson/poisson_boundary_hetero_interface.cc
poisson/poisson_boundary_homo_interface.cc
poisson/poisson_boundary_ii_interface.cc
poisson/poisson_boundary_ir_interface.cc
poisson/poisson_boundary_is_interface.cc
poisson/poisson_boundary_ohmic.cc
poisson/poisson_boundary_poly_gate.cc
poisson/poisson_boundary_resistance_ohmic.cc
poisson/poisson_boundary_resistance_schottky.cc
poisson/poisson_boundary_rr_interface.cc
poisson/poisson_boundary_schottky.cc
poisson/poisson_boundary_simple_gate.cc
poisson/poisson_boundary_solderpad.cc
poisson/poisson.cc
poisson/poisson_conductor.cc
poisson/poisson_conductor_hanging_node.cc
poisson/poisson_insulator.cc
poisson/poisson_insulator_hanging_node.cc
poisson/poisson_resistance.cc
poisson/poisson_resistance_hanging_node.cc
poisson/poisson_semiconductor.cc
poisson/poisson_semiconductor_hanging_node.cc
ray_tracing/light_thread.cc
#ray_tracing/object_tree.cc
ray_tracing/ray_tracing.cc
stress_solver/stress_solver.cc
)

#SET (SUBDIRS
#ddm1
#ddm1r
#ddm2
#ddm_ac
#ddm_common
#dg
#doping_analytic
#ebm3
#emfem2d
#hall
#hdm
#mix1
#mixA1
#mixA2
#mixA3
#mole_analytic
#poisson
#ray_tracing
#stress_solver
#)
#
#FOREACH(SUB ${SUBDIRS})
#ADD_SUBDIRECTORY(${SUB})
#ENDFOREACH(SUB ${SUBDIRS})

INCLUDE_DIRECTORIES(${MXML_INCLUDE} ${EXPREVAL_INCLUDE} ${SPICE_INCLUDE} ${CSABATHY_INCLUDE} ${ANN_INCLUDE} ${NN_INCLUDE} ${INTERPOLATION_INCLUDE} ${SPLINE_INCLUDE})
ADD_LIBRARY(solver ${CXX_SRCS})
